# OpenXR-OSX

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: commitlint.yml  pr-android-build.yml  pr-apple-builds.yml  pr-macos-runtime-heavy.yml  release-please.yml
clients/OpenXR Clients.xcworkspace/: contents.xcworkspacedata
clients/android-openxr/: settings.gradle.kts
clients/android-openxr/app/: build.gradle.kts
clients/android-openxr/app/src/main/: AndroidManifest.xml
clients/android-openxr/app/src/main/cpp/: CMakeLists.txt  NetworkReceiver.cpp  NetworkReceiver.h  TrackingSender.cpp  VideoDecoder.cpp  XrApp.cpp  XrApp.h  main.cpp
clients/android-openxr/app/src/main/java/com/oculus/: NativeActivity.java
clients/android-openxr/app/src/main/res/values/: strings.xml
clients/common/OpenXRSimulator/: Package.swift
clients/common/OpenXRSimulator/Sources/OpenXRSimulator/: OpenXRSimulatorView.swift  SimulatorInputManager.swift
clients/common/OpenXRStreaming/: Package.swift
clients/common/OpenXRStreaming/Sources/OpenXRStreaming/: DiscoveryClient.swift  Protocol.swift
clients/common/OpenXRStreaming/Tests/OpenXRStreamingTests/: ProtocolLayoutTests.swift
clients/common/src/: FecCodec.h  Protocol.h
clients/companion/OpenXR OSX Companion/: CompanionAppModel.swift  CompanionPreferences.swift  CompanionSupport.swift  CompanionWindows.swift  ContentView.swift  OpenXR OSX Companion.entitlements  OpenXRServerConfig.swift  OpenXR_OSX_CompanionApp.swift
clients/companion/OpenXR OSX Companion.xcodeproj/: project.pbxproj
clients/simulator/OpenXR Simulator/: ContentView.swift  OpenXR_SimulatorApp.swift  SimulatorModel.swift
clients/simulator/OpenXR Simulator.xcodeproj/: project.pbxproj
clients/visionos/Vision Player/: AppModel.swift  ContentView.swift  Renderer.swift  ShaderTypes.h  Shaders.metal  ToggleImmersiveSpaceButton.swift  VisionTrackingManager.swift
clients/visionos/Vision Player.xcodeproj/: project.pbxproj
cmake/: RunOpenXRCTS.cmake  SyncCompileCommands.cmake
docs/: architecture.md  build.md  install.md  protocol.md  releases.md  simulator.md  testing-and-conformance.md
runtime/: CMakeLists.txt  openxr_osx.json.in  openxr_osx.toml
runtime/src/: ActionSet.cpp  ActionSet.h  Config.cpp  Config.h  EntryPoint.cpp  HandTracker.cpp  HandTracker.h  InputManager.cpp  InputManager.h  Instance.cpp  Instance.h  Runtime.cpp  Runtime.h  RuntimeStatus.cpp  RuntimeStatus.h  Session.cpp  Session.h  Space.cpp  Space.h  StreamingServer.cpp  StreamingServer.h  Swapchain.h  Swapchain.mm  TrackingReceiver.cpp  TrackingReceiver.h  VideoEncoder.h  VideoEncoder.mm  VulkanDispatch.h
scripts/: README.md  openxr_runtime_default.sh  package_home.sh
scripts/ci/: build-android.sh  build-home.sh  build-simulator.sh  build-visionos.sh  commitlint.py  common.sh  verify-macos-runtime-heavy.sh  verify-pr-lightweight.sh
scripts/unity/Editor/: OpenXRRuntimeAutoSelector.cs
tests/: CompanionLauncherTests.swift  TestConfig.cpp  TestInputManager.cpp  TestProtocolLayout.cpp  TestRuntimeApi.cpp  TestRuntimeStatus.cpp
